adjust project structure, add CI configuration

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,6 @@
 
     <modules>
         <module>trafficcounter-backend</module>
-        <module>trafficcounter-frontend</module>
+        <!--<module>trafficcounter-frontend</module>-->
     </modules>
 </project>
