--- a/trafficcounter-frontend/package.json
+++ b/trafficcounter-frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers ChromeHeadless --watch=false"
+    "test": "ng test",
+    "test-ci": "ng test --browsers ChromeHeadlessNoSandbox --watch=false"
   },
   "private": true,
   "dependencies": {
