--- a/trafficcounter-frontend/pom.xml
+++ b/trafficcounter-frontend/pom.xml
@@ -16,11 +16,6 @@
     </dependencies>
 
     <build>
-        <resources>
-            <resource>
-                <directory>ui-src</directory>
-            </resource>
-        </resources>
         <plugins>
             <plugin>
                 <groupId>com.github.eirslett</groupId>
@@ -46,23 +41,23 @@
                     </execution>
 
                     <execution>
+                        <id>npm run test</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run test --watch=false</arguments>
+                        </configuration>
+                    </execution>
+
+                    <execution>
                         <id>npm run build</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
 
                         <configuration>
-                            <arguments>run build</arguments>
-                        </configuration>
-                    </execution>
-
-                    <execution>
-                        <id>npm run test</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>test</arguments>
+                            <arguments>run build --watch --open</arguments>
                         </configuration>
                     </execution>
 
