--- a/trafficcounter-frontend/pom.xml
+++ b/trafficcounter-frontend/pom.xml
@@ -57,7 +57,7 @@
                         </goals>
 
                         <configuration>
-                            <arguments>run build --watch --open</arguments>
+                            <arguments>run build</arguments>
                         </configuration>
                     </execution>
 
