--- a/trafficcounter-frontend/package.json
+++ b/trafficcounter-frontend/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^14.2.0",
     "@types/maplibre-gl": "^1.14.0",
     "maplibre-gl": "^2.4.0",
+    "ngx-toastr": "^15.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
