--- a/trafficcounter-frontend/package.json
+++ b/trafficcounter-frontend/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@types/maplibre-gl": "^1.14.0",
     "maplibre-gl": "^2.4.0",
     "ngx-toastr": "^15.2.1",
