--- a/trafficcounter-backend/src/main/resources/application.yml
+++ b/trafficcounter-backend/src/main/resources/application.yml
@@ -18,5 +18,8 @@ spring:
       mode: always
   profiles:
     default: dev
+  web:
+    resources:
+      static-locations: classpath:/trafficcounter-frontend
 trafficcounter:
   api-key: ${TRAFFICCOUNTER_API_KEY:""}
