--- a/trafficcounter-backend/pom.xml
+++ b/trafficcounter-backend/pom.xml
@@ -5,13 +5,19 @@
     <parent>
         <groupId>ch.bfh</groupId>
         <artifactId>trafficcounter</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>trafficcounter-backend</artifactId>
-    <version>0.1.0</version>
+    <version>0.1.1-SNAPSHOT</version>
     <name>trafficcounter-backend</name>
     <description>trafficcounter-backend</description>
     <dependencies>
+        <dependency>
+            <groupId>ch.bfh</groupId>
+            <artifactId>trafficcounter-frontend</artifactId>
+            <version>${project.version}</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -100,6 +106,7 @@
     </dependencies>
 
     <build>
+        <finalName>trafficcounter-backend</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -157,6 +164,31 @@
                     <additionalOptions>-Xdoclint:none</additionalOptions>
                     <additionalJOption>-Xdoclint:none</additionalJOption>
                 </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.10</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>ch.bfh</groupId>
+                                    <artifactId>trafficcounter-frontend</artifactId>
+                                    <version>${project.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>false</overWrite>
+                                    <outputDirectory>${project.build.directory}/classes/</outputDirectory>
+                                    <includes>trafficcounter-frontend/**</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
