--- a/trafficcounter-frontend/package.json
+++ b/trafficcounter-frontend/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "test-ci": "ng test --browsers ChromeHeadlessNoSandbox --watch=false"
+    "test": "ng test --browsers ChromeHeadlessNoSandbox --watch=false",
+    "test-dev": "ng test"
   },
   "private": true,
   "dependencies": {
