--- a/trafficcounter-backend/pom.xml
+++ b/trafficcounter-backend/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
@@ -136,7 +140,8 @@
                     </vmArgs>
                     <extension>true</extension>
                     <bindingFiles>
-                        <bindingFile>${basedir}/src/main/resources/ch/opentdata/wsdl/MeasurementPublications_FEDRO_02-01-00.xsd
+                        <bindingFile>
+                            ${basedir}/src/main/resources/ch/opentdata/wsdl/MeasurementPublications_FEDRO_02-01-00.xsd
                         </bindingFile>
                     </bindingFiles>
                     <packageName>ch.opentdata.wsdl</packageName>
