--- a/trafficcounter-backend/src/main/resources/application-dev.yml
+++ b/trafficcounter-backend/src/main/resources/application-dev.yml
@@ -1,2 +1,10 @@
 server:
   port: 8080
+spring:
+  datasource:
+    hikari:
+      maximum-pool-size: 100
+      idle-timeout: 30000
+      max-lifetime: 1000000
+      connection-timeout: 30000
+      minimum-idle: 10
