add staging profile, adjust CI configuration

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ build_image:
     - develop
     - master
 
-deploy_dev:
+deploy_staging:
   extends: .docker
   stage: deploy
   tags:
@@ -80,9 +80,9 @@ deploy_dev:
     - develop
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - CONTAINER_EXISTS=$(docker ps -a -q -f name="trafficcounter-dev" | wc -l)
-    - if [ "$CONTAINER_EXISTS" == "1" ]; then docker rm -f trafficcounter-dev; fi
-    - docker run -d --name trafficcounter-dev -p 8081:8080 --env TRAFFICCOUNTER_API_KEY=$TRAFFICCOUNTER_API_KEY $CI_REGISTRY_IMAGE:latest
+    - CONTAINER_EXISTS=$(docker ps -a -q -f name="trafficcounter-staging" | wc -l)
+    - if [ "$CONTAINER_EXISTS" == "1" ]; then docker rm -f trafficcounter-staging; fi
+    - docker run -d --name trafficcounter-staging -p 8081:8080 --network="host" --env TRAFFICCOUNTER_API_KEY=$TRAFFICCOUNTER_API_KEY --env SPRING_PROFILES_ACTIVE=staging --env TRAFFICCOUNTER_DB_PASSWORD=$TRAFFICCOUNTER_DB_PASSWORD $CI_REGISTRY_IMAGE:latest
 
 pages:
   stage: doc
