disable hibernate sql logging

--- a/trafficcounter-backend/src/main/resources/application.yml
+++ b/trafficcounter-backend/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
+    show-sql: false
   sql:
     init:
       mode: always
