--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,9 @@ stages:
 variables:
   MAVEN_OPTS: "-Dmaven.repo.local=/.m2"
 
-test-backend:
+test_backend:
   stage: test
+  needs: [ ]
   script:
     - ./mvnw test -pl trafficcounter-backend
   cache:
@@ -18,9 +19,10 @@ test-backend:
       - /.m2/repository
     key: "$CI_BUILD_REF_NAME"
 
-test-frontend:
+test_frontend:
   image: node:16-alpine
   stage: test
+  needs: [ ]
   script:
     - apk add --no-cache chromium
     - export CHROME_BIN=$(which chromium-browser)
@@ -35,6 +37,7 @@ test-frontend:
 
 build_app:
   stage: build
+  needs: [ ]
   script:
     - apk add --no-cache openssl ncurses-libs libstdc++ chromium chromium-chromedriver
     - export CHROME_BIN=/usr/bin/chromium-browser
@@ -56,11 +59,11 @@ build_app:
 build_image:
   extends: .docker
   stage: build
-  tags:
-    - trafficcounter
   needs:
     - job: build_app
       artifacts: true
+  tags:
+    - trafficcounter
   script:
     - TRAFFICCOUNTER_VERSION=$(cat version.txt)
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
@@ -74,6 +77,10 @@ build_image:
 deploy_staging:
   extends: .docker
   stage: deploy
+  needs:
+    - job: build_image
+    - job: test-backened
+    - job: test-frontend
   tags:
     - trafficcounter
   only:
